Change makefile to compile with CUDA Need CUDA installation on both Windows and Linux subsystem

--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,4 @@
-/bin/encoder/rx_encoder_ctrl
-/bin/fluid/rx_fluid_ctrl
-/bin/fluid/rx_fluid_nios
-/bin/gui/rx_common_lib_cs.dll
-/bin/gui/RX_DigiPrint.exe
-/bin/head/rx_head_cond
-/bin/head/rx_head_ctrl
-/bin/head/rx_head_nios
-/bin/main/rx_dhcp_server
-/bin/main/rx_main_ctrl
-/bin/rx_boot_lx
-/bin/rx_boot_soc
-/bin/spooler/rx_spooler_ctrl
-/bin/stepper/rx_stepper_ctrl
-/bin/win/rx_main_ctrl.exe
-/bin/win/rx_rip_lib.dll
-/bin/win/rx_spooler_ctrl.exe
-/bin/win10/ndisapi.dll
-/bin/win10/rx_net_bridge.exe
-/bin/win10/rx_route.exe
-/bin/win10/Win10-Install.exe
-/bin/win10/Win10-RunOnce.exe
-/bin/win10/Win10-Startup.exe
+/bin
 *.prefs
 /rx_head_nios/software/.metadata/.plugins/org.eclipse.cdt.core/rx_head_nios.language.settings.xml
 /rx_head_nios/software/.metadata/.plugins/org.eclipse.cdt.ui/dialog_settings.xml
@@ -94,10 +72,12 @@ org.eclipse.core.resources
 rx_fluid_nios/software/rx_fluid_nios/mem_init/
 rx_head_nios/software/rx_head_nios/mem_init/
 rx_digiprint_gui/Properties/AssemblyInfo.cs
+mvt_digiprint_gui/Properties/AssemblyInfo.cs
 *.sdf
 *.opensdf
 rx_rip_lib.dll
 *.csproj.user
+*.vcxproj.user
 rx_fluid_nios/software/.metadata/
 rx_head_nios/software/.metadata/
 version.c
