Bugfix reading and diplaing the log

--- a/rx_common_lib_cs/rx_common_lib_cs.csproj
+++ b/rx_common_lib_cs/rx_common_lib_cs.csproj
@@ -61,6 +61,7 @@
     <PlatformTarget>x64</PlatformTarget>
     <ErrorReport>prompt</ErrorReport>
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+    <UseVSHostingProcess>true</UseVSHostingProcess>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug-Remote|x64'">
     <DebugSymbols>true</DebugSymbols>
