--- a/rx_slicescreen_lib/rx_slicescreen_lib.vcxproj
+++ b/rx_slicescreen_lib/rx_slicescreen_lib.vcxproj
@@ -316,7 +316,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release-lx|Win32'">
     <LinkIncremental>true</LinkIncremental>
     <TargetExt>.lib</TargetExt>
-    <IntDir>$(SolutionDir)_temp\$(MSBuildProjectName)\$(Configuration)\</IntDir>
+    <IntDir>$(ProjectDir)..\_temp\$(MSBuildProjectName)\$(Configuration)\</IntDir>
     <IncludePath />
     <ReferencePath />
     <LibraryPath />
