removed average.c/.h that are not used any more

--- a/rx_fluid_nios/software/rx_fluid_nios/Makefile
+++ b/rx_fluid_nios/software/rx_fluid_nios/Makefile
@@ -157,7 +157,6 @@ C_SRCS += heater.c
 C_SRCS += trprintf.c
 C_SRCS += comm.c
 C_SRCS += fifo.c
-C_SRCS += average.c
 CXX_SRCS :=
 ASM_SRCS :=
 
@@ -175,7 +174,7 @@ CREATE_ELF_DERIVED_FILES := 0
 CREATE_LINKER_MAP := 1
 
 # Common arguments for ALT_CFLAGSs
-APP_CFLAGS_DEFINED_SYMBOLS := -DNIOS -DAVERAGE
+APP_CFLAGS_DEFINED_SYMBOLS := -DNIOS
 APP_CFLAGS_UNDEFINED_SYMBOLS :=
 APP_CFLAGS_OPTIMIZATION := -O0
 APP_CFLAGS_DEBUG_LEVEL := -g
