--- a/rx_stepper_ctrl/rx_stepper_ctrl.vcxproj
+++ b/rx_stepper_ctrl/rx_stepper_ctrl.vcxproj
@@ -196,6 +196,7 @@
     <ClCompile Include="lbrob.c" />
     <ClCompile Include="motor.c" />
     <ClCompile Include="power_step.c" />
+    <ClCompile Include="robi_lb702.c" />
     <ClCompile Include="robi.c" />
     <ClCompile Include="rx_stepper_ctrl.c" />
     <ClCompile Include="stepper_ctrl.c" />
@@ -233,8 +234,9 @@
     <ClInclude Include="power_step.h" />
     <ClInclude Include="ps_common.h" />
     <ClInclude Include="ps_motor.h" />
-    <ClInclude Include="robi.h" />
+    <ClInclude Include="robi_lb702.h" />
     <ClInclude Include="robi_def.h" />
+    <ClInclude Include="robi.h" />
     <ClInclude Include="stepper_ctrl.h" />
     <ClInclude Include="slide.h" />
     <ClInclude Include="test.h" />
