--- a/rx_stepper_ctrl/rx_stepper_ctrl.vcxproj.filters
+++ b/rx_stepper_ctrl/rx_stepper_ctrl.vcxproj.filters
@@ -106,6 +106,9 @@
     <ClCompile Include="comm.c">
       <Filter>Source files</Filter>
     </ClCompile>
+    <ClCompile Include="robi_lb702.c">
+      <Filter>Source files</Filter>
+    </ClCompile>
     <ClCompile Include="robi.c">
       <Filter>Source files</Filter>
     </ClCompile>
@@ -210,10 +213,13 @@
     <ClInclude Include="comm.h">
       <Filter>Header files</Filter>
     </ClInclude>
-    <ClInclude Include="robi.h">
+    <ClInclude Include="robi_def.h">
       <Filter>Header files</Filter>
     </ClInclude>
-    <ClInclude Include="robi_def.h">
+    <ClInclude Include="robi_lb702.h">
+      <Filter>Header files</Filter>
+    </ClInclude>
+    <ClInclude Include="robi.h">
       <Filter>Header files</Filter>
     </ClInclude>
   </ItemGroup>
